--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,9 @@ hr {
 }
 
 #work,#about, #team, 
-#portfolio, #pricing, #contact {
-   padding-top: 100px;
-  padding-bottom: 100px;
+#properties, #pricing, #contact {
+	padding-top: 20px;
+	padding-bottom: 100px;
 }
 
 
@@ -448,22 +448,22 @@ team section
 }
 
 /* ==========================================================================
-portfolio section
+properties section
 ========================================================================== */
-#portfolio {
+#properties {
   background-color: #f6f6f6;
   text-align: center;
   }
-#portfolio .container {
+#properties .container {
   width: 100%;
   padding: 0;
   margin: 0;
 }
-#portfolio img {
+#properties img {
   width: 100%;
   transition: all 0.4s ease-in-out;
 }
-#portfolio img:hover {
+#properties img:hover {
   opacity: 0.5;
 }
 /* FILTER CSS */
@@ -687,8 +687,8 @@ footer p {
 
 @media screen and (min-width: 992px) {
   @-moz-document url-prefix() {
-    #portfolio .col-lg-4,
-    #portfolio .col-md-4 {
+    #properties .col-lg-4,
+    #properties .col-md-4 {
       width: 33.333%;
     }
   }    
