--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,8 @@ home section
 	padding: 12px 42px;
 	margin-top: 40px;
 	transition: all 0.4s ease-in-out;
+	margin-left: 2px;
+	margin-right: 2px;
 }
 #home .btn:hover {
   background: #00c6d7;
