--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,9 @@ h1, h2, h3, h4 {
 }
 
 p {
-  line-height: 28px;
-  font-size: 15px;
+	line-height: 28px;
+	font-size: 15px;
+	text-align: center;
 }
 
 a {
@@ -466,7 +467,7 @@ properties section
   transition: all 0.4s ease-in-out;
 }
 #properties img:hover {
-  opacity: 0.5;
+	opacity: 0.85;
 }
 /* FILTER CSS */
 .filter-wrapper {
@@ -477,21 +478,25 @@ properties section
 	margin-bottom: 24px;
 	overflow: hidden;
 	text-align: center;
+	padding-left: 0;
 }
 .filter-wrapper li {
     display: inline-block;
     margin: 4px;
 }
 .filter-wrapper li a {
-    color: #999999;
-    font-size: 13px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    padding: 8px 17px;
-    display: block;
-    text-decoration: none;
-    transition: all 0.4s ease-in-out;
+	color: #999999;
+	font-size: 10px;
+	font-weight: bold;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	padding-top: 8px;
+	padding-right: 8px;
+	padding-left: 8px;
+	padding-bottom: 8px;
+	display: block;
+	text-decoration: none;
+	transition: all 0.4s ease-in-out;
 }
 .filter-wrapper li .selected,
 .filter-wrapper li a:focus,
@@ -629,7 +634,7 @@ contact section
   padding-bottom: 14px;
 }
 #contact form {
-  padding-top: 60px;
+	padding-top: 12px;
 }
 #contact .form-control {
   border: 2px solid #ffffff;
