--- a/assets/home/css/main.css
+++ b/assets/home/css/main.css
@@ -290,7 +290,7 @@
 
 /* Type */
 
-	body, input, select, textarea {
+	body, input, select, textarea, button.subscribe {
 		color: rgba(255, 255, 255, 0.75);
 		font-family: "Roboto", sans-serif;
 		font-size: 16pt;
@@ -301,7 +301,7 @@
 
 		@media screen and (max-width: 1680px) {
 
-			body, input, select, textarea {
+			body, input, select, textarea, button.subscribe {
 				font-size: 12pt;
 			}
 
@@ -309,7 +309,7 @@
 
 		@media screen and (max-width: 1280px) {
 
-			body, input, select, textarea {
+			body, input, select, textarea, button.subscribe {
 				font-size: 11pt;
 			}
 
@@ -317,7 +317,7 @@
 
 		@media screen and (max-width: 980px) {
 
-			body, input, select, textarea {
+			body, input, select, textarea, button.subscribe {
 				font-size: 12pt;
 			}
 
@@ -325,7 +325,7 @@
 
 		@media screen and (max-width: 736px) {
 
-			body, input, select, textarea {
+			body, input, select, textarea, button.subscribe {
 				font-size: 12pt;
 			}
 
@@ -333,7 +333,7 @@
 
 		@media screen and (max-width: 480px) {
 
-			body, input, select, textarea {
+			body, input, select, textarea, button.subscribe {
 				font-size: 12pt;
 			}
 
