--- a/assets/home/css/main.css
+++ b/assets/home/css/main.css
@@ -1055,7 +1055,7 @@
 
 /* Signup Form */
 
-	#signup-form {
+	#gform {
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -1063,40 +1063,40 @@
 		position: relative;
 	}
 
-		#signup-form input[type="text"],
-		#signup-form input[type="password"],
-		#signup-form input[type="email"] {
+		#gform input[type="text"],
+		#gform input[type="password"],
+		#gform input[type="email"] {
 			width: 18em;
 		}
 
-		#signup-form > * {
+		#gform > * {
 			margin: 0 0 0 1em;
 		}
 
-		#signup-form > :first-child {
+		#gform > :first-child {
 			margin: 0 0 0 0;
 		}
 
 		@media screen and (max-width: 480px) {
 
-			#signup-form {
+			#gform {
 				-moz-flex-direction: column;
 				-webkit-flex-direction: column;
 				-ms-flex-direction: column;
 				flex-direction: column;
 			}
 
-				#signup-form input[type="type"],
-				#signup-form input[type="password"],
-				#signup-form input[type="email"] {
+				#gform input[type="type"],
+				#gform input[type="password"],
+				#gform input[type="email"] {
 					width: 100%;
 				}
 
-				#signup-form > * {
+				#gform > * {
 					margin: 1.25em 0 0 0;
 				}
 
-				#signup-form .message {
+				#gform .message {
 					bottom: -1.5em;
 					font-size: 0.9em;
 					height: 1em;
