--- a/assets/product/css/style.css
+++ b/assets/product/css/style.css
@@ -205,7 +205,7 @@ ul.desc-points li:hover {
     width: 100%;
     height: 400px;
 }
-form#contact-form { padding: 10px 0 }
+form#contact-form { padding: 7px 0 80px 0; }
 .contact form#contact-form {padding: 0}
 .form-control:focus {
     border-color: inherit;
