--- a/assets/product/css/style.css
+++ b/assets/product/css/style.css
@@ -205,8 +205,8 @@ ul.desc-points li:hover {
     width: 100%;
     height: 400px;
 }
-form#contact-form { padding: 7px 0 80px 0; }
-.contact form#contact-form {padding: 0}
+form#gform { padding: 7px 0 80px 0; }
+.contact form#gform {padding: 0}
 .form-control:focus {
     border-color: inherit;
     outline: 0;
