--- a/assets/product/css/style.css
+++ b/assets/product/css/style.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
 body,
 html {
     -webkit-font-smoothing: antialiased !important;
@@ -81,6 +82,19 @@ ul.desc-points {
 	margin-left: 0;
 	padding-left: 0;
 }
+ul.desc-points p {
+	line-height: 25px;
+	margin-bottom: 10px;
+	font-size: 15px;
+	text-align: justify;
+}
+ul.desc-points p.bold {
+	font-weight: bold;
+}
+ul.desc-points p.last {
+	margin-top: 50px;
+	text-align: center;
+}
 ul.desc-points li {
 	line-height: 25px;
 	margin-bottom: 10px;
@@ -89,6 +103,7 @@ ul.desc-points li {
 	text-indent: -1em;
 	transition: 0.7s;
 	-webkit-transition: 0.2s;
+	margin-left: 1em;
 }
 ul.desc-points li:before {
   content: "✔";
